--- a/proyecto1.html
+++ b/proyecto1.html
@@ -25,11 +25,11 @@
             margin-top: 20px;
         }
         .project-img {
-            width: 30%;
+            width: 70%;
             height: auto;
             margin-bottom: 20px;
             transition: transform 0.3s ease;
-            cursor: pointer; /* Añadido para que se vea que es interactiva */
+            cursor: pointer; 
         }
         .project-img:hover {
             transform: scale(1.05);
